<resources>
    <string name="app_name">Debuggy</string>

    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_faq">Frequently Asked Questions</string>

    <string name="header_information">Information</string>
    <string name="header_contributors">Contributors</string>
    <string name="header_developers">Developers</string>
    <string name="header_description">Description</string>
    <string name="header_instruction">Instruction</string>
    <string name="header_dependencies">Dependencies</string>

    <string name="title_adb_daemon">ADB daemon</string>
    <string name="summary_adb_daemon_running">Running</string>
    <string name="summary_adb_daemon_stopped">Stopped</string>
    <string name="summary_adb_daemon_with_root">Status available with root</string>
    <string name="title_adbd_listening_port">ADBD listening port</string>
    <string name="summary_adbd_listening_port">%1$s</string>
    <string name="title_root_access">Root access</string>
    <string name="summary_root_access_granted">Granted</string>
    <string name="summary_root_access_declined">Declined</string>
    <string name="summary_root_access_not_requested">Not requested yet</string>
    <string name="title_adb_over_usb">ADB over USB</string>
    <string name="summary_adb_over_usb_enabled">Enabled</string>
    <string name="summary_adb_over_usb_disabled">Disabled</string>
    <string name="title_switch_adb_enabled">ADB enabled</string>
    <string name="title_switch_adb_disabled">ADB disabled</string>
    <string name="title_switch_adb_unavailable">ADB unavailable</string>

    <string name="summary_connect_to_device">connect this device and PC to same WI-FI network</string>
    <string name="summary_run_command_def_port">on PC run command: adb connect %1$s</string>
    <string name="summary_run_command">on PC run command: adb connect %1$s:%2$s</string>
    <string name="message_instruction_when_adb_enabled">Turn on the ADB to display instructions</string>

    <string name="title_general">General</string>
    <string name="summary_general">Custom port, run after boot</string>
    <string name="title_appearance">Appearance</string>
    <string name="summary_appearance">Dark theme, system colors</string>
    <string name="title_security">Security</string>
    <string name="summary_security">Lock app, disable ADB after time</string>
    <string name="title_experimental">Experimental</string>
    <string name="summary_experimental">Unreleased features</string>
    <string name="title_about">About</string>
    <string name="summary_about">Version, changelog, F.A.Q, updates</string>

    <string name="title_adb_enabled">ADB over network enabled</string>
    <string name="content_adb_enabled">"Available on: %1$s:%2$s"</string>
    <string name="content_adb_enabled_def_port">"Available on: %1$s"</string>
    <string name="message_ip_unable_determine">Unable to determine the IP address. Check your WI-FI connection</string>

    <string name="message_action_unavailable">This action only available with root</string>

    <string name="message_network_connection_failed">Your network is unavailable. Check your WI-FI connection.</string>
    <string name="text_turn_on_internet">Turn on WI-FI</string>

    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_reset">Reset</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_undo">Undo</string>

    <string name="title_set_custom_port">Set custom port</string>
    <string name="summary_port">Port</string>
    <string name="error_port_less_4_char">Port cannot be less than 4 characters</string>

    <string name="toast_debuggy_running">Debuggy running…</string>

    <string name="system_status_adb_enabled">ADB ENABLED = %1$b, [%2$d]</string>

    <string name="header_set_theme">Set theme</string>
    <string name="header_set_adb_over_usb">Set ADB over USB variable</string>
    <string name="header_set_disable_adb_after_while">Set ADB shutdown time</string>

    <string name="message_system_colors_only">Theme by the system only available on android 12</string>
    <string name="message_takes_effect_next_time">Takes effect when turning on ADB over network next time</string>
    <string name="message_adb_startup">Enables ADB over network after device startup. May not work on some devices.</string>

    <string name="title_theme">Theme</string>
    <string name="summary_light">Light</string>
    <string name="summary_dark">Dark</string>
    <string name="summary_default">Follow system settings</string>
    <string name="summary_system_colors">Use colors provided by the system</string>
    <string name="title_system_colors">Use system colors</string>
    <string name="summary_soft_restart">Restarting devices for avoid bugs with ADB over network</string>
    <string name="title_soft_restart">Soft restart</string>
    <string name="summary_adb_over_usb">Change adb over usb system variable</string>
    <string name="title_custom_port">Custom port</string>
    <string name="title_adb_after_boot">Enable ADB over network after boot</string>

    <string name="summary_support">F.A.Q</string>
    <string name="summary_feedback">Feedback</string>
    <string name="summary_news">News</string>
    <string name="summary_translate">Translate</string>
    <string name="title_app_description">Application for enabling ADB over network</string>
    <string name="title_changelog">Changelog</string>
    <string name="title_libraries">Libraries</string>
    <string name="title_updates">Updates</string>
    <string name="version_concat_with_buildtime">%1$s \n %2$s</string>

    <string name="jeffrey_status">Developer &amp; Designer</string>
    <string name="title_developer_portfolio">Portfolio</string>

    <string name="title_without_root">Can I use the app without root access?</string>
    <string name="message_without_root">No, the application uses root access to enable network debugging via system values. You can use network debugging through the "For Developers" item.</string>
    <string name="title_connect_via_pc">I cannot connect to the device via PC</string>
    <string name="message_connect_via_pc">If you have any difficulties with connecting to the device, I recommend checking the "Debugging via WI-FI" item in "For Developers", perhaps your firmware does not support this function, or was cut by the developer.</string>
    <string name="title_connect_more_devices">Is it possible to connect 2 or more devices via network debugging to a PC?</string>
    <string name="message_connect_more_devices">Yes, especially for this in the settings there is an item "User port" that makes it possible to change the port to your own in order to avoid such situations.</string>
    <string name="title_after_load_not_work">Debugging over the network after booting the device does not work</string>
    <string name="message_after_load_not_work">After boot network debugging may not work if the firmware manufacturer has restricted the ability to run programs in the background, in which case you will have to enable it manually.</string>

    <string name="title_authentication_at_start">Request authentication at start</string>
    <string name="message_authentication_enable">Each time you enter the application, you will be prompted for a fingerprint or password \n \nI recommend enabling this function if your device can be unattended</string>
    <string name="title_disable_adb_after_while">Turn off ADB after a while</string>
    <string name="message_disable_adb_after_while">Disables ADB over the network after a certain time</string>
    <string name="title_never">Never</string>
    <string name="title_one_hour">1 hour</string>
    <string name="title_two_hours">2 hours</string>
    <string name="title_four_hours">4 hours</string>
    <string name="title_six_hours">6 hours</string>
    <string name="title_twelve_hours">12 hours</string>

    <string name="title_biometric_prompt">Action authentication</string>
    <string name="message_switch_root_unavailable">The functionality is not available, because you have denied access to the root-rights of the application</string>

    <string name="message_disable_tcp">Disable</string>
    <string name="message_soft_restart">Are your sure?</string>
    <string name="message_port_reset">ADBD port reset</string>
</resources>