<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jeffrey.debuggy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.jeffrey.debuggy.ui.setting.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_general_settings"
        android:name="com.jeffrey.debuggy.ui.setting.general.GeneralSettingsFragment"
        android:label="@string/title_general"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_appearance_settings"
        android:name="com.jeffrey.debuggy.ui.setting.appearance.AppearanceSettingsFragment"
        android:label="@string/title_appearance"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_security_settings"
        android:name="com.jeffrey.debuggy.ui.setting.security.SecuritySettingsFragment"
        android:label="@string/title_security"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_experimental_settings"
        android:name="com.jeffrey.debuggy.ui.setting.experimental.ExperimentalSettingsFragment"
        android:label="@string/title_experimental"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_about_settings"
        android:name="com.jeffrey.debuggy.ui.setting.about.AboutSettingsFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_faq"
        android:name="com.jeffrey.debuggy.ui.faq.FAQFragment"
        android:label="@string/title_faq"
        tools:layout="@layout/fragment_faq" />

</navigation>